feat: Add cron endpoint for storing announcements in memcache

--- a/index.yaml
+++ b/index.yaml
@@ -25,3 +25,8 @@ indexes:
   properties:
   - name: month
   - name: name
+
+- kind: Conference
+  properties:
+  - name: seatsAvailable
+  - name: name
