--- a/app.yaml
+++ b/app.yaml
@@ -36,8 +36,12 @@ handlers:       # static then dynamic
 
 - url: /crons/set_announcement
   script: main.app
-  login: admin  
+  login: admin
 
+- url: /tasks/send_confirmation_email
+  script: main.app
+  login: admin
+  
 libraries:
 
 - name: endpoints
