feat: Add cron job

--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,8 @@ version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
+builtins:
+- appstats: on
 
 handlers:       # static then dynamic
 
@@ -41,7 +43,7 @@ handlers:       # static then dynamic
 - url: /tasks/send_confirmation_email
   script: main.app
   login: admin
-  
+
 libraries:
 
 - name: endpoints
