--- a/app.yaml
+++ b/app.yaml
@@ -44,6 +44,10 @@ handlers:       # static then dynamic
   script: main.app
   login: admin
 
+- url: /tasks/set_featured_speaker
+  script: main.app
+  login: admin
+
 libraries:
 
 - name: endpoints
